--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <div class="mouse2"></div>
     <div class="mouse_cover"></div>
 
+    <div class="brush1"></div>
+    <div class="brush2"></div>
+
   </main>
 </body>
 </html>
